# chip-8-rs

./: Cargo.toml  README.md  build.sh  single-line.ch8  single-pixel.ch8  single-pixel.ch8.bak
src/: display.rs  instruction.rs  keymap.rs  main.rs  opcode.rs  register.rs  stack.rs  vm.rs
