[package]
name = "rpizw"
version = "0.1.0"
authors = ["ThrDev <zac@stykocompany.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# beep = "0.3.0"
console_engine = "1.5.1"
rand = "0.8.3"

[target.arm-unknown-linux-gnueabi]
linker = "arm-linux-gnueabi-gcc"