[package]
name = "rpizw"
version = "0.1.0"
authors = ["ThrDev <zac@stykocompany.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# beep = "0.3.0"
minifb = "0.19.3"
rand = "0.8.3"
spin_sleep = "1.0.0"

#[target.arm-unknown-linux-gnueabi]
#linker = "arm-linux-gnueabi-gcc"